--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,15 +3,17 @@
 
   <cdk-virtual-scroll-viewport [itemSize]="2" class="message-viewport">
     <h3>Notifications</h3>
-    <div  *cdkVirtualFor="let notification of allNotifications;" class="message-item" (click)="notificationTable(notification)">
-      Date: {{notification.date}}. Message: {{notification.message}}
+    <div  *cdkVirtualFor="let notification of allNotifications;" class="message-item">
+      <strong>Date:</strong> {{notification.date}}. <strong>Message:</strong> {{notification.message}}
+      <mat-icon (click)="notificationTable(notification)">delete_outline</mat-icon>
     </div>
   </cdk-virtual-scroll-viewport>
 
   <cdk-virtual-scroll-viewport [itemSize]="2" class="message-viewport" >
     <h3>Admin messages</h3>
-    <div *cdkVirtualFor="let adminNotification of allAdminNotifications;" class="message-item" (click)="notificationTable(adminNotification)">
-      Date: {{adminNotification.date}} Message: {{adminNotification.message}}
+    <div *cdkVirtualFor="let adminNotification of allAdminNotifications;" class="message-item">
+      <strong>Date:</strong> {{adminNotification.date}} <br><strong>Message:</strong> {{adminNotification.message}}
+      <mat-icon (click)="notificationTable(adminNotification)">delete_outline</mat-icon>
     </div>
   </cdk-virtual-scroll-viewport>
 </div>
