--- a/src/app/components/cancel-reservation/cancel-reservation.component.html
+++ b/src/app/components/cancel-reservation/cancel-reservation.component.html
@@ -1,8 +1,9 @@
+<h3>Cancel reservation</h3>
 <div mat-dialog-content class="container">
-  <p>Do you want to cancel reservation on {{reservation.date}}</p>
-  <p>{{reservation.buildingName}}, {{reservation.floorNumber}}, {{reservation.roomName}}, {{reservation.deskName}} </p>
+  <p>Do you want to cancel reservation on <b>{{reservation.date}}</b></p>
+  <p>{{reservation.buildingName}}, {{reservation.floorNumber}}, {{reservation.roomName}}, {{reservation.deskName}}?</p>
   <button mat-button (click)="cancelReservationById(reservation.reservationId)">Cancel reservation</button>
-  <button mat-button (click)="keepReservationButtonClickEvent()">Keep Reservation</button>
+  <button mat-button (click)="keepReservationButtonClickEvent()">Keep reservation</button>
 </div>
 
 
