--- a/src/app/components/reservation-history/reservation-history.component.html
+++ b/src/app/components/reservation-history/reservation-history.component.html
@@ -4,16 +4,17 @@
 
 <div class="reservation-history-table" fxFlex fxLayout="column">
   <h2>My desk booking history</h2>
+
   <div>
     <table>
-      <thead>
+      <thead mat-sort-header-arrow>
       <th (click)="sortReservationsByDate()">Date</th>
 
-        <th>Building
-          <mat-form-field [style.width.px]="100">
+        <th>
+          <mat-form-field class="mat-form-field-sorting" [style.width.px]="100">
             <mat-label>Building</mat-label>
             <mat-select [formControl]="buildingSelect" (selectionChange)="filterList()">
-              <mat-option [value]="">all</mat-option>
+              <mat-option [value]="">All</mat-option>
               <mat-option *ngFor="let building of buildings" [value]="building">{{building.buildingName}}</mat-option>
             </mat-select>
           </mat-form-field>
@@ -21,15 +22,14 @@
       <th>Floor</th>
       <th>Room</th>
       <th>Desk</th>
-      <th>Status
-        <mat-form-field [style.width.px]="100">
+      <th>
+        <mat-form-field class="mat-form-field-sorting" [style.width.px]="100">
           <mat-label>Status</mat-label>
           <mat-select [formControl]="statusSelected" (selectionChange)="filterList()">
             <mat-option [value]="">ALL</mat-option>
             <mat-option [value]="'ACTIVE'">ACTIVE</mat-option>
             <mat-option [value]="'EXPIRED'">EXPIRED</mat-option>
             <mat-option [value]="'CANCELED'">CANCELED</mat-option>
-
           </mat-select>
         </mat-form-field>
       </th>
