--- a/src/app/components/reservation-history/reservation-history.component.scss
+++ b/src/app/components/reservation-history/reservation-history.component.scss
@@ -1,9 +1,21 @@
 table, h2 {
-    width: 100%;
-    margin: 10px;
+    width: 80%;
+    margin: 20px auto;
+    text-align: left;
   }
+
+th, td {
+  border-bottom: 1px solid #ddd;
+}
 
 .ACTIVE {
   color: blue;
   text-decoration: underline;
 }
+
+::ng-deep .mat-form-field-label {
+  color: black !important;
+  font-weight: bold !important;
+}
+
+
