reservation-history and cancel-reservation components styled

--- a/src/app/components/reservation-history/reservation-history.component.html
+++ b/src/app/components/reservation-history/reservation-history.component.html
@@ -7,7 +7,7 @@
 
   <div>
     <table>
-      <thead mat-sort-header-arrow>
+      <thead>
       <th (click)="sortReservationsByDate()">Date</th>
 
         <th>
