--- a/src/app/components/cancel-reservation/cancel-reservation.component.scss
+++ b/src/app/components/cancel-reservation/cancel-reservation.component.scss
@@ -7,7 +7,7 @@ button {
   box-shadow: 0 4px 10px -6px #222;
   text-align: right;
   float:right;
-  margin: 5px;
+  margin: 20px 5px;
 }
 
 button:hover {
