--- a/src/app/components/forms/change-password/change-password.component.html
+++ b/src/app/components/forms/change-password/change-password.component.html
@@ -15,7 +15,7 @@
         new password field is required
       </mat-error>
       <mat-error *ngIf="getNewPassword?.errors?.['pattern']">
-        password must include lowercase latter, uppercase letter a number and a special character
+        password must include lowercase latter, uppercase letter and a number
       </mat-error>
     </mat-form-field>
 
@@ -26,13 +26,18 @@
         current password repeat field is required
       </mat-error>
     </mat-form-field>
+
+  <div *ngIf="successMessage">
+    <p class="green">{{successMessage}}</p>
+  </div>
+
   <div *ngIf="errorMessage">
     <mat-error>
       {{errorMessage}}
     </mat-error>
   </div>
 
-   <button class="cancel-button" (click)="closeDialog()" mat-button>Cancel</button>
+   <button class="cancel-button" (click)="closeDialog()" mat-button>close</button>
    <button class="save-button" (click)="changePasswordRequest()" mat-button>Change password</button>
   </form>
 
