--- a/src/app/components/forms/change-password/change-password.component.css
+++ b/src/app/components/forms/change-password/change-password.component.css
@@ -7,13 +7,12 @@ button {
   border: 1px solid #9999994b;
   box-shadow: 0 4px 10px -6px #222;
   text-align: right;
-  float:right;
+  float: right;
 }
 
 button:hover {
   border: 3px solid #1080a5b8;
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 button:active {
@@ -38,9 +37,12 @@ mat-form-field {
   padding: 10px;
   border: 1px solid #008cba;
   border-radius: 5px;
-  color: rgb(0, 0, 0);
+  color: black;
   box-shadow: 0 4px 10px -6px #222;
 }
+
 .green {
   color: green;
 }
+
+/*# sourceMappingURL=change-password.component.css.map */
