--- a/src/app/components/forms/upload-image/upload-image.component.html
+++ b/src/app/components/forms/upload-image/upload-image.component.html
@@ -1,4 +1,7 @@
+<div *ngIf="selectedFile">
+  <p>{{selectedFile.name}}</p>
+</div>
 <input mat-dialog-content style="display: none" type="file" (change)="onFileUpload($event)" #selectFile>
 <button (click)="selectFile.click()" mat-button>Select floor plan image</button>
 <button (click)="updateFloorPlan()" [disabled]="!selectedFile" mat-button>change</button>
-<button (click)="closeDialog()">Cancel</button>
+<button (click)="closeDialog()" mat-button>Cancel</button>
