--- a/src/app/components/forms/add-new-room/add-new-room.component.html
+++ b/src/app/components/forms/add-new-room/add-new-room.component.html
@@ -1,7 +1,9 @@
+<div class="container">
 <mat-form-field>
   <mat-label>Room Name</mat-label>
   <input id="userid" [formControl]="roomName" matInput formControlName="userId">
-  <button mat-button (click)="addNewRoom()">add room</button>
-  <button mat-button (click)="closeForm()">cancel</button>
 </mat-form-field>
-
+  <div class="button-container"><button mat-button (click)="addNewRoom()">Add new room</button>
+  <button mat-button (click)="closeForm()">Cancel</button>
+  </div>
+</div>
