--- a/src/app/components/manage-desks/manage-desks.component.html
+++ b/src/app/components/manage-desks/manage-desks.component.html
@@ -26,7 +26,6 @@
     <button class="select-button" (click)="selectBuilding(building)">
       Select building
     </button>
-
   </div>
   <button class="add-new-button" mat-button (click)="addNewBuilding()">
     Add new building
@@ -34,10 +33,13 @@
 </ng-template>
 
 <ng-template #displayFloors>
-  <p>Building: {{ selectedBuilding!.buildingName! }}</p>
-  <button class="add-new-button" (click)="display = Entities.BUILDINGS">
+  <div class="button-and-building">
+
+  <button class="change-building-button" (click)="display = Entities.BUILDINGS">
     Change building
   </button>
+      <p>Building: {{ selectedBuilding!.buildingName! }}</p>
+  </div>
   <div
     class="buildings"
     *ngFor="let floor of floors!"
@@ -64,7 +66,7 @@
     <button class="delete-button" (click)="deleteFloor(floor)">
       Delete floor
     </button>
-    <img class="floor-plan" [src]="getFloorPlan(floor)">
+    <img class="floor-plan" [src]="getFloorPlan(floor)" />
   </div>
   <button class="add-new-button" mat-button (click)="addNewFloor()">
     Add new floor
@@ -72,15 +74,30 @@
 </ng-template>
 
 <ng-template #displayRooms>
-  <p>Building: {{ selectedBuilding!.buildingName! }}</p>
-  <p>Floor: {{ selectedFloor!.floorName! }}</p>
-  <button class="add-new-button" (click)="display = Entities.BUILDINGS">
-    Change building
-  </button>
-  <button class="add-new-button" (click)="reselectFloor()">
-    Change floor
-  </button>
-  <div class="container-with-desks" *ngFor="let room of listOfRooms" [ngSwitch]="room === selectedRoom">
+  <div class="button-and-building">
+   
+    <button
+      class="change-building-button"
+      (click)="display = Entities.BUILDINGS"
+    >
+      Change building
+    </button>
+     <p>Building: {{ selectedBuilding!.buildingName! }}</p>
+  </div>
+
+  <div class="button-and-building">
+   
+    <button class="change-building-button" (click)="reselectFloor()">
+      Change floor
+    </button>
+     <p>Floor: {{ selectedFloor!.floorName! }}</p>
+  </div>
+
+  <div
+    class="container-with-desks"
+    *ngFor="let room of listOfRooms"
+    [ngSwitch]="room === selectedRoom"
+  >
     <app-click-to-edit
       *ngSwitchCase="true"
       [value]="room.roomName"
@@ -89,12 +106,18 @@
     ></app-click-to-edit>
 
     <div>
-    <div class="room-name-with-desks" *ngSwitchCase="false" (click)="selectedRoom = room">
-      {{ room.roomName }}</div>
+      <div
+        class="room-name-with-desks"
+        *ngSwitchCase="false"
+        (click)="selectedRoom = room"
+      >
+        {{ room.roomName }}
+      </div>
       <button
         class="delete-room-button"
         mat-button
-        (click)="deleteRoom(room.roomId)">
+        (click)="deleteRoom(room.roomId)"
+      >
         Delete room
       </button>
     </div>
@@ -111,10 +134,13 @@
         (cancelEvents)="selectedDesk = null"
       ></app-click-to-edit>
 
-      <div class="building-name" *ngSwitchCase="false" (click)="selectedDesk = desk">
+      <div
+        class="building-name"
+        *ngSwitchCase="false"
+        (click)="selectedDesk = desk"
+      >
         {{ desk.deskName }}
       </div>
-
 
       <div *ngIf="desk.available">
         <button
@@ -136,7 +162,11 @@
           Set desk available
         </button>
       </div>
-      <button class="delete-desk-button" mat-button (click)="deleteDesk(desk.id)">
+      <button
+        class="delete-desk-button"
+        mat-button
+        (click)="deleteDesk(desk.id)"
+      >
         Delete desk
       </button>
     </div>
@@ -149,8 +179,8 @@
     Add new room
   </button>
 
-
-  <img class="floor-plan" [src]="currentFloorPlan">
-  <button (click)="changeFloorPlan()" mat-button>change image</button>
-
+  <img class="floor-plan" [src]="currentFloorPlan" />
+  <button class="add-new-button" (click)="changeFloorPlan()" mat-button>
+    Change image
+  </button>
 </ng-template>
