--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -1,5 +1,53 @@
+label,
+h2 {
+  margin: 20px 0 20px 20px;
+}
 
+input {
+  margin-left: 7px;
+}
 
+td {
+  border: 1px solid grey;
+  padding: 5px 30px 5px 10px;
+}
 
+th {
+  border: 1px solid grey;
+  padding: 10px;
+}
+
+table {
+  border: 1px solid grey;
+  border-collapse: collapse;
+  margin-top: 50px;
+  margin-left: 20px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+}
+table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+table tr:hover {
+  background-color: #ddd;
+}
+
+.edit-button {
+  height: 25px;
+  border-radius: 5px;
+  border: 1px solid #9999994b;
+  box-shadow: 0 4px 10px -6px #222;
+}
+
+.edit-button:hover {
+  background-color: #008CBA;
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.edit-button:active {
+  transform: translateY(2px);
+}
 
 /*# sourceMappingURL=admin.component.css.map */
