user interface minor adjustment

--- a/src/app/components/user-info/user-info.component.html
+++ b/src/app/components/user-info/user-info.component.html
@@ -5,6 +5,6 @@
   <p><strong>Department:</strong> {{user.firstName}}</p>
   <p><strong>Role:</strong> {{user.role}}</p>
   <p><strong>Email:</strong> {{user.email}}</p>
-  <p><strong>Default floor:</strong> {{user.defaultFloorId}}</p>
+  <p><strong>Default floor:</strong> {{user.defaultFloorName}}</p>
 </div>
 <button (click)="closeDialog()" mat-button>close</button>
