--- a/src/app/components/forms/send-message-form/send-message-form.component.scss
+++ b/src/app/components/forms/send-message-form/send-message-form.component.scss
@@ -2,7 +2,7 @@ button {
   float:right;
   margin-top: 30px;
   background-color: #008cba;
-  color: white;
+  color: white !important;
   margin-right: 5px;
 }
 
