--- a/src/app/components/reservation-history/reservation-history.component.html
+++ b/src/app/components/reservation-history/reservation-history.component.html
@@ -12,24 +12,31 @@
         <th>Building
           <mat-form-field [style.width.px]="100">
             <mat-label>Building</mat-label>
-            <mat-select [formControl]="buildingSelect" (selectionChange)="filterList()">
-              <mat-option [value]="">all</mat-option>
+            <mat-select [formControl]="buildingSelect" (selectionChange)="getFloors(); filterList()" [value]="''">
+              <mat-option [value]="''">all</mat-option>
               <mat-option *ngFor="let building of buildings" [value]="building">{{building.buildingName}}</mat-option>
             </mat-select>
           </mat-form-field>
         </th>
-      <th>Floor</th>
+      <th>Floor
+        <mat-form-field [style.width.px]="100">
+          <mat-label>floor name</mat-label>
+          <mat-select [formControl]="floorSelected" (selectionChange)="filterList()">
+            <mat-option [value]="''">all</mat-option>
+            <mat-option *ngFor="let floor of floors" [value]="floor.floorName">{{floor.floorName}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </th>
       <th>Room</th>
       <th>Desk</th>
       <th>Status
         <mat-form-field [style.width.px]="100">
           <mat-label>Status</mat-label>
-          <mat-select [formControl]="statusSelected" (selectionChange)="filterList()">
-            <mat-option [value]="">ALL</mat-option>
+          <mat-select [formControl]="statusSelected" (selectionChange)="filterList()" [value]="''">
+            <mat-option [value]="''">ALL</mat-option>
             <mat-option [value]="'ACTIVE'">ACTIVE</mat-option>
             <mat-option [value]="'EXPIRED'">EXPIRED</mat-option>
             <mat-option [value]="'CANCELED'">CANCELED</mat-option>
-
           </mat-select>
         </mat-form-field>
       </th>
