--- a/src/app/components/forms/select-floor/select-floor.component.html
+++ b/src/app/components/forms/select-floor/select-floor.component.html
@@ -17,8 +17,8 @@
     </div>
   </mat-select>
 
-  <button (click)="changeFloor()" [disabled]="!selectFloorForm.valid" mat-button>select</button>
-  <button (click)="closeForm()" mat-button>cancel</button>
+    <button (click)="closeForm()" mat-button>Cancel</button>
+  <button (click)="changeFloor()" [disabled]="!selectFloorForm.valid" mat-button>Select</button>
 
 
 </form>
