styles eilini karta

--- a/src/app/components/reservations/reservations.component.scss
+++ b/src/app/components/reservations/reservations.component.scss
@@ -46,7 +46,7 @@ img {
   position: fixed;
   bottom: 0;
   background-color: #008cba;
-  color: white !important;
+  color: white;
   font-size: medium;
   border-radius: 5px;
   border: 1px solid #9999994b;
