--- a/src/app/components/forms/edit-user-form/edit-user-form.component.scss
+++ b/src/app/components/forms/edit-user-form/edit-user-form.component.scss
@@ -92,3 +92,14 @@ mat-form-field {
   justify-content: space-between;
   margin-left: 20px;
 }
+
+
+.close-user-button {
+  background-color: #008cba;
+  color: white;
+  border-radius: 5px;
+  border: 1px solid #9999994b;
+  box-shadow: 0 4px 10px -6px #222;
+  float:right;
+  margin-top: -19px;
+}
