--- a/src/app/components/forms/add-desks-form/add-desks-form.component.scss
+++ b/src/app/components/forms/add-desks-form/add-desks-form.component.scss
@@ -32,3 +32,14 @@ button:active {
   width: 250px;
   height: 110px;
 }
+
+.cancel-button {
+  color: rgb(166, 16, 16) !important;
+  background-color: white !important;
+}
+
+.cancel-button:hover {
+  background-color: rgb(166, 16, 16) !important;
+  color: white !important;
+  border: none !important;
+}
