--- a/src/app/components/forms/add-new-floor/add-new-floor.component.scss
+++ b/src/app/components/forms/add-new-floor/add-new-floor.component.scss
@@ -48,3 +48,14 @@ button:active {
   border-radius: 5px;
   color: white !important;
 }
+
+.cancel-button {
+  color: rgb(166, 16, 16) !important;
+  background-color: white !important;
+}
+
+.cancel-button:hover {
+  background-color: rgb(166, 16, 16) !important;
+  color: white !important;
+  border: none !important;
+}
