--- a/src/app/components/forms/add-new-room/add-new-room.component.scss
+++ b/src/app/components/forms/add-new-room/add-new-room.component.scss
@@ -29,3 +29,14 @@ button:hover {
 button:active {
   transform: translateY(3px);
 }
+
+.cancel-button {
+  color: rgb(166, 16, 16) !important;
+  background-color: white !important;
+}
+
+.cancel-button:hover {
+  background-color: rgb(166, 16, 16) !important;
+  color: white !important;
+  border: none !important;
+}
