--- a/src/app/components/forms/change-password/change-password.component.scss
+++ b/src/app/components/forms/change-password/change-password.component.scss
@@ -41,3 +41,14 @@ mat-form-field {
   color: rgb(0, 0, 0);
   box-shadow: 0 4px 10px -6px #222;
 }
+
+.cancel-button {
+  color: rgb(166, 16, 16) !important;
+  background-color: white !important;
+}
+
+.cancel-button:hover {
+  background-color: rgb(166, 16, 16) !important;
+  color: white !important;
+  border: none !important;
+}
