--- a/src/app/components/forms/notification-message/notification-message.component.html
+++ b/src/app/components/forms/notification-message/notification-message.component.html
@@ -3,4 +3,4 @@
   DATE: {{notification.date}}
   {{notification.message}}
 </div>
-<button mat-button (click)="closeForm()">close</button>
+<button mat-button (click)="closeForm()">Close</button>
