--- a/src/app/components/forms/select-floor/select-floor.component.html
+++ b/src/app/components/forms/select-floor/select-floor.component.html
@@ -17,7 +17,7 @@
     </div>
   </mat-select>
 
-    <button (click)="closeForm()" mat-button>Cancel</button>
+    <button class="cancel-button" (click)="closeForm()" mat-button>Cancel</button>
   <button (click)="changeFloor()" [disabled]="!selectFloorForm.valid" mat-button>Select</button>
 
 
