--- a/src/app/components/forms/send-message-form/send-message-form.component.html
+++ b/src/app/components/forms/send-message-form/send-message-form.component.html
@@ -42,8 +42,8 @@
         </mat-form-field>
       </mat-form-field>
 
-      <button class="cancel-button" (click)="createAndSendNotification()" mat-button>Send</button>
-      <button class="save-button" (click)="closeDialog()" mat-button [disabled]="">Cancel</button>
+      <button class="save-button" (click)="createAndSendNotification()" mat-button>Send</button>
+      <button class="cancel-button" (click)="closeDialog()" mat-button [disabled]="">Cancel</button>
 
     </form>
 </div>
