--- a/src/app/components/forms/add-new-room/add-new-room.component.html
+++ b/src/app/components/forms/add-new-room/add-new-room.component.html
@@ -4,6 +4,6 @@
   <input id="userid" [formControl]="roomName" matInput formControlName="userId">
 </mat-form-field>
   <div class="button-container"><button mat-button (click)="addNewRoom()">Add new room</button>
-  <button mat-button (click)="closeForm()">Cancel</button>
+  <button class="cancel-button" mat-button (click)="closeForm()">Cancel</button>
   </div>
 </div>
