--- a/src/app/components/forms/upload-image/upload-image.component.scss
+++ b/src/app/components/forms/upload-image/upload-image.component.scss
@@ -5,7 +5,6 @@
 
 .save-button, .cancel-button {
   background-color: #008cba;
-  color: white !important;
   font-size: smaller;
   border-radius: 5px;
   border: 1px solid #9999994b;
@@ -15,8 +14,12 @@
   margin: 10px;
 }
 
+.save-button {
+    color: white !important;
+}
+
 .cancel-button:hover, .save-button:hover {
-  border: 3px solid #1080a5b8;
+  border: 2px solid #1080a5b8;
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
@@ -34,4 +37,15 @@
   border: 1px solid #008cba;
   border-radius: 5px;
   padding: 20px;
+}
+
+.cancel-button {
+  color: rgb(166, 16, 16) !important;
+  background-color: white !important;
+}
+
+.cancel-button:hover {
+  background-color: rgb(166, 16, 16) !important;
+  color: white !important;
+  border: none !important;
 }
