--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,7 +17,7 @@
       </mat-error>
     </mat-form-field>
     <button class="login-buttons" mat-raised-button (click)="login()">Login</button>
-    <button class="login-buttons" mat-raised-button (click)="resetForm()">Cancel</button>
+    <button class="login-buttons" id="cancel-button" mat-raised-button (click)="resetForm()">Cancel</button>
   </form>
   <p>In case you faced login issues, please contact <a href="app.support@corporate.com">app.support@corporate.com</a>
   </p>
