--- a/src/app/components/user-info/user-info.component.html
+++ b/src/app/components/user-info/user-info.component.html
@@ -6,4 +6,4 @@
   <p>Role: {{user.role}}</p>
   <p>Email: {{user.email}}</p>
 </div>
-<button (click)="closeDialog()" mat-button>close</button>
+<button (click)="closeDialog()" mat-button>Close</button>
