--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,6 +18,9 @@
               <button mat-button (click)="sendNotification()">
                 Send notification
               </button>
+              <button mat-button (click)="motivate()">
+                MOTIVATE
+              </button>
             </div>
           </div>
           <div class="dropdown">
