--- a/src/app/components/forms/notification-display/notification-display.component.scss
+++ b/src/app/components/forms/notification-display/notification-display.component.scss
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 .submit {
   margin: 5px;
   text-align: center;
@@ -19,7 +19,7 @@ button {
 
 button:hover {
   transform: translateY(2px);
-=======
+
 .cancel-button {
   color: rgb(166, 16, 16) !important;
   background-color: white !important;
@@ -29,5 +29,6 @@ button:hover {
   background-color: rgb(166, 16, 16) !important;
   color: white !important;
   border: none !important;
->>>>>>> origin/sandra-really-final
+
+}
 }
