--- a/src/app/components/forms/change-password/change-password.component.html
+++ b/src/app/components/forms/change-password/change-password.component.html
@@ -37,7 +37,7 @@
     </mat-error>
   </div>
 
-   <button class="cancel-button" (click)="closeDialog()" mat-button>close</button>
+   <button class="cancel-button" (click)="closeDialog()" mat-button>Close</button>
    <button class="save-button" (click)="changePasswordRequest()" mat-button>Change password</button>
   </form>
 
