--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -39,6 +39,7 @@ mat-select {
 .dropdown-content {
   display: none;
   position: absolute;
+  right: 5px;
   background-color: #f1f1f1;
   width: auto;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
