some changes with buttons and titles

--- a/src/app/components/booking-messages/booking-messages.component.html
+++ b/src/app/components/booking-messages/booking-messages.component.html
@@ -25,10 +25,9 @@
 
 
 <ng-template #successful>
+
+  <h2>Reservation is successful!</h2>
   <div mat-dialog-content class="container" >
-
-    <p><b>Reservation is successful!</b></p>
-
 
     <p><b>Date:</b> {{currentReservation?.date}}</p>
     <p><b>Building:</b> {{currentReservation?.buildingName}}</p>
