--- a/src/app/components/forms/select-floor/select-floor.component.html
+++ b/src/app/components/forms/select-floor/select-floor.component.html
@@ -1,3 +1,5 @@
+<h2>Change floor</h2>
+
 <div class="container">
   <form [formGroup]="selectFloorForm">
   <mat-label class="selection-title">Building</mat-label>
