--- a/src/app/components/user-info/user-info.component.html
+++ b/src/app/components/user-info/user-info.component.html
@@ -1,3 +1,5 @@
+<h2>Account info</h2>
+
 <div *ngIf="user$ | async as user">
   <p><strong>First Name:</strong> {{user.firstName}}</p>
   <p><strong>Middle Name:</strong> {{user.middleName}}</p>
