--- a/src/app/components/reservation-history/reservation-history.component.html
+++ b/src/app/components/reservation-history/reservation-history.component.html
@@ -6,7 +6,7 @@
   <h2>My desk booking history</h2>
 
   <div>
-    <table>
+    <table >
       <thead>
       <th (click)="sortReservationsByDate()">Date</th>
 
@@ -23,9 +23,9 @@
             </mat-select>
           </mat-form-field>
         </th>
-      <th>Floor
+      <th>
         <mat-form-field [style.width.px]="100">
-          <mat-label>floor name</mat-label>
+          <mat-label>Floor name</mat-label>
           <mat-select [formControl]="floorSelected" (selectionChange)="filterList()">
             <mat-option [value]="''">all</mat-option>
             <mat-option *ngFor="let floor of floors" [value]="floor.floorName">{{floor.floorName}}</mat-option>
