small header changes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
           </div>
           <div class="dropdown">
             <button mat-raised-button class="drop-btn">My account</button>
-            <div class="dropdown-content">
+            <div class="dropdown-content" id="my-profile">
               <button mat-button [routerLink]="'/history'">
                 My bookings
               </button>
